# myprs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release-macos-arm64.yml
src/: bitbucket.rs  config.rs  main.rs  tui.rs
